# NMPC_ARM

./: README.md
old/: AuxiliaryController.cpp  AuxiliaryController.h  NMPC.cpp
src/: AuxiliaryController.cpp  AuxiliaryController.h  NMPC.cpp  a.out  f2c.h  fort.9  qpopt.h  readme.txt
src/a.out.dSYM/Contents/Resources/DWARF/: a.out
src/blas/: blas1.c
to delete/: AuxiliaryController.cpp  AuxiliaryController.h  Geodesic.cpp  Geodesic.h  NMPC.cpp  blas2.c  f06subs.c  lcpar2_com.c  mcsubs.c  opsubs.c  qpoptsubs.c  sol1qp_com.c  sol3cm_com.c  sol3lc_com.c  sol5cm_com.c  solmch_com.c
to delete/NMPC.app/Contents/MacOS/: NMPC
to delete/NMPC.app/Contents/MacOS/NMPC.dSYM/Contents/: Info.plist
to delete/NMPC.app/Contents/MacOS/NMPC.dSYM/Contents/Resources/DWARF/: NMPC
to delete/qpopt/: GNUmakefile.in  INSTALL.ALL  INSTALL.OSX  INSTALL.x86-64  configure  configure.ac  readme.SGI  readme.first  readme.install
to delete/qpopt/CVS/: Entries  Repository
to delete/qpopt/DOS/: f06subs.for  lpsubs.for  qpmain.for  utsubs.for
to delete/qpopt/DOS/CVS/: Entries  Repository
to delete/qpopt/VMS/: README.doc  blas1.for  lpopt.lnk  lpopt.mak  lpoptmain.for  lpoptmain.opt  qpopt.lnk  qpopt.mak  qpoptsubs.for  rzsubs.for  vms.doc  vmsmake.com
to delete/qpopt/VMS/CVS/: Entries  Repository
to delete/qpopt/cmex/: Contents.m  lpopt.m  lpoptcmex.mexglx  lpprintfile.m  lpprm.m  lpprms.m  lpsummary.m  qpopt.m  qpoptcmex.mexglx  qpprintfile.m  qpprm.m  qpprms.m  qpsummary.m
to delete/qpopt/cmex/CVS/: Entries  Repository
to delete/qpopt/cmex/examples/: lpoptmain.m  portfolio.m  qpoptmain.m
to delete/qpopt/cmex/examples/CVS/: Entries  Repository
to delete/qpopt/cmex/src/: GNUmakefile  lpopt.h  lpoptcmex.c  lpprmswrapper.c  lpprmswrapper.f  lpprmswrapper.h  mexUtility.c  mexUtility.h  qpoptcmex.c  qpprmswrapper.c  qpprmswrapper.f  qpprmswrapper.h
to delete/qpopt/cmex/src/CVS/: Entries  Repository
to delete/qpopt/cmex/tests/: echoOptions  lpmain.m  lpopt.opt  tester.m  warmStart
to delete/qpopt/cmex/tests/CVS/: Entries  Repository
to delete/qpopt/config/CVS/: Entries  Repository
to delete/qpopt/csrc/: GNUmakefile  MakecfilesQP  cmsubs.c  lcpar1_com.c  lpoptsubs.c  qpoptsubs.c  rzsubs.c  sol1cm_com.c  sol1lc_com.c  sol2lc_com.c  sol4cm_com.c  sol4lc_com.c  utcomsubs.c
to delete/qpopt/csrc/CVS/: Entries  Repository
to delete/qpopt/doc/: qpopt.ps
to delete/qpopt/doc/CVS/: Entries  Repository
to delete/qpopt/examples/: Submakefile  qpoptmain.opt  run
to delete/qpopt/examples/CVS/: Entries  Repository
to delete/qpopt/f2c/: Submakefile
to delete/qpopt/f2c/CVS/: Entries  Repository
to delete/qpopt/f2c/libf2c/: file2.txt  makefile
to delete/qpopt/f2c/libf2c/CVS/: Entries  Repository
to delete/qpopt/f2c/libf77/: file1.txt  makefile
to delete/qpopt/f2c/libf77/CVS/: Entries  Repository
to delete/qpopt/f2c/libi77/: makefile
to delete/qpopt/f2c/libi77/CVS/: Entries  Repository
to delete/qpopt/f2c/src/: file2.txt  index.html  xsum0.out
to delete/qpopt/f2c/src/CVS/: Entries  Repository
to delete/qpopt/fmex/: Submakefile  lpoptfmex.F90  mexUtilityModule.f90  precisionModule.f90  qpoptfmex.F90
to delete/qpopt/fmex/CVS/: Entries  Repository
to delete/qpopt/fmex/examples/CVS/: Repository
to delete/qpopt/fmex/src/CVS/: Repository
to delete/qpopt/matlab/: Contents.m  lpopt.m  lpoptfmex.mexmaci  precompiled_lpoptfmex.mexa64  qpopt.m  qpoptfmex.mexmaci  runAllExamples.m  setpath.m
to delete/qpopt/matlab/CVS/: Entries  Repository
to delete/qpopt/matlab/examples/: lpmain.m  qpmain.m
to delete/qpopt/matlab/examples/CVS/: Entries  Repository
to delete/qpopt/src/: ChangeLog  Submakefile  blas2.f  cmsubs.f  lpoptsubs.f  mcsubs.f  opsubs.f  qpoptsubs.f
to delete/qpopt/src/CVS/: Entries  Repository  Root
to delete/qpopt/tests/: GNUmakefile  qptestmain.f  run  tester.f
to delete/qpopt/tests/CVS/: Entries  Repository
to delete/qpopt/utils/: ftnchek_lpopt  ftnchek_qpopt  makeDOS  makeVMS
to delete/qpopt/utils/CVS/: Entries  Repository
